--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -307,7 +307,7 @@
             android:src="@drawable/folder"
             android:backgroundTint="@color/colorPrimary"
             android:background="@null"
-            android:onClick="openFile"/>
+            android:onClick="showPickSongDialog"/>
     </RelativeLayout>
 
     <!-- PLAY BUTTON -->
@@ -382,6 +382,102 @@
             android:textSize="200sp"
             android:layout_marginTop="-25dp"
             android:textColor="#FFF"/>
+    </RelativeLayout>
+
+    <!-- SONG SELECTION DIALOG -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="20dp"
+        android:background="#b2000000"
+        android:id="@+id/layoutPickSongBackground"
+        android:visibility="gone"
+        android:clickable="true">
+        <RelativeLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="#FFF"
+            android:paddingTop="24dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="24dp"
+            android:elevation="15dp">
+            <TextView
+                android:id="@+id/textPickSong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="Pick a song"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginRight="16dp"
+                android:textColor="#212121"/>
+            <LinearLayout
+                android:id="@+id/layoutSongOptions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_below="@id/textPickSong"
+                android:layout_marginRight="16dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="72dp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:onClick="setDefaultSong1">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Meatball Parade"
+                        android:textSize="16sp"
+                        android:textColor="#212121"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Kevin MacLeod"
+                        android:textSize="14sp"
+                        android:textColor="#727272"/>
+                </LinearLayout>
+                <!-- divider -->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#e0e0e0"
+                    android:layout_below="@+id/textChairs"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:clickable="true">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Custom song..."
+                        android:textSize="16sp"
+                        android:fontFamily="sans-serif-medium"
+                        android:textColor="#212121"
+                        android:onClick="openFile"/>
+                </LinearLayout>
+            </LinearLayout>
+            <Button
+                android:id="@+id/buttonCancelPickSong"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                android:layout_below="@id/layoutSongOptions"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:text="CANCEL"
+                android:fontFamily="sans-serif-medium"
+                android:background="#FFF"
+                android:textColor="@color/colorPrimary"
+                style="?android:attr/borderlessButtonStyle"
+                android:onClick="hidePickSongDialog"/>
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
